--- a/index.html
+++ b/index.html
@@ -28,3 +28,23 @@
         <script src="view.js"></script>
     </body>
 </html>
+<!--
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>地図に赤い点を描画</title>
+    <style>
+      /* 地図の表示領域の設定 */
+      #map {
+        height: 500px;
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIIIsR84RaFQNakXwb-30rsdcxs-n7w-c&callback=initMap" async defer></script>
+    <script src="view.js"></script>
+  </body>
+</html>-->
